--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.nat-gateway.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.nat-gateway.yml
@@ -68,14 +68,14 @@ runcmd:
   # install network hardening tools for security evaluation of firewall rules
   - /root/scripts/install-network-hardening-tools.sh $logfile
   # Lockdown private network interface access to minimal required config
-  - |
-    /root/scripts/nftables_lockdown_nat_gateway.sh \
-      ${DEMO_SUBNET_ISOLATED_CIDR} \
-      ${DEMO_SUBNET_EXPOSED_CIDR} \
-      ${PRODUCTION_SUBNET_ISOLATED_CIDR} \
-      ${PRODUCTION_SUBNET_EXPOSED_CIDR} \
-      ${BASTION_HOST_PRIVATE_IP} \
-      >> $logfile 2>&1
+  # - |
+  #   /root/scripts/nftables_lockdown_nat_gateway.sh \
+  #     ${DEMO_SUBNET_ISOLATED_CIDR} \
+  #     ${DEMO_SUBNET_EXPOSED_CIDR} \
+  #     ${PRODUCTION_SUBNET_ISOLATED_CIDR} \
+  #     ${PRODUCTION_SUBNET_EXPOSED_CIDR} \
+  #     ${BASTION_HOST_PRIVATE_IP} \
+  #     >> $logfile 2>&1
   # reboots server for network config to take effect
   - printf "\n# Rebooting server...\n" >> $logfile
   - date >> $logfile
